# pp_2020_autumn_informatics

modules/task_1/napylov_e_different_characters/: CMakeLists.txt  count_diff_char_mpi.cpp  main.cpp
modules/task_2/napylov_e_gauss_horizontal/: first_ver_of_gauss.cpp  gauss_horizontal.cpp  gauss_horizontal.h  main.cpp
